fix(wrapper): Fix for page height jump.
BREAKING CHANGE: Consumers are now required to pass in a 'wrapper' that
wraps the inner contents of body. This is so we can absolutely position
the overlay to share the height of the page, without having to measure
the document and apply a height manually.

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -49,6 +49,7 @@ h2 {
 .site {
     background-color: #fff;
     min-height: 100vh;
+    position: relative;
 }
 
 .push-top {
